Version 2.6.3
=======================
x updated Trakt.tv libs
x fix release build version info
x fix some nullpointers
x added more transifex languages
x and some more minor internal things... 

Version 2.6.2
=======================
+ added column for watched state to the movie table
+ added action to scrape episode metadata without thumbs
+ added quick creation of movie sets to the movie bulk editor
x greatly improved our episode detection engine
x performance improvements with loading and update datasources
x fixed season poster detection
x fixed occasional crashes with trakt.tv
x fixed wrong filenames in the renamer preview
x fixed losing donator registration information
x fixed crashes in ofdb.de, moviemeter.nl and zelluloid.de scraper
x fixed trailer detection (movies with trailer in their name weren't added) 
x fixed startup crashes with orphaned movie sets 

Version 2.6.1
=======================
x fixed scraping of episode metadata
x fixed TV show renamer
x fixed year setting for TV show renamer 
x fixed image chooser for thumbs (they are no longer be shown as fanarts) 
x fixed slow performance of image cache with offline data sources
x fixed crashes with trakt.tv sync
x fixed opening of movie/TV show folder and playing of videos for linux/kde
x improved handling of 0byte downloads (artwork) and choosing local artwork files

=======================
 Version 2.6
=======================

/!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\
!                       D O N A T O R      V E R S I O N                       !
!                                                                              !
!    Our donators are now able to register their tinyMediaManager copies to    !
!         unlock special features as a "Thank you" for their support.          !
!                           http://goo.gl/L8G5BB                               !
\!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!/
