@@ -262,6 +262,9 @@ public class MovieToMpNfoConnector {
     }
     else {
       nfonames = MovieModuleManager.MOVIE_SETTINGS.getMovieNfoFilenames();
+      if (movie.isDisc()) {
+        nfonames.add(MovieNfoNaming.DISC_NFO); // add additionally the NFO at disc style location
+      }
     }
     for (MovieNfoNaming name : nfonames) {
 
